--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "tailwind": "^4.0.0"
+    "react-toastify": "^11.0.5",
+    "tailwind": "^4.0.0",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
